<resources>
    <string name="app_name">Boilerplate</string>
    <string name="login_app_name">Boilerplate</string>

    <!--Username activity-->
    <string name="username_hint">username</string>
    <string name="username_required">Username required</string>
    <string name="remember_checkbox_content_desc">remember checkbox</string>
    <string name="content_description_app_logo">app logo</string>
    <string name="remember_checkbox">remember</string>
    <string name="view_user_content_description">view user button</string>
    <string name="view_user_button_label">View User Info</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="generic_ok">OK</string>
    <string name="generic_cancel">Cancel</string>
    <string name="permission_open_settings_screen">Click OK to open Settings to enable this permission.</string>
    <string name="permission_open_settings_suggestion">Open Settings->Apps screen and enable this permission.</string>
    <string name="permission_rationale_location">Your location is required to get local results.</string>
</resources>
