<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/content_description_app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginEnd="16dp"/>

    <CheckBox
        android:id="@+id/remember_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remember_checkbox_content_desc"
        android:text="@string/remember_checkbox"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/view_user_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:contentDescription="@string/view_user_content_description"
        android:text="@string/view_user_button_label"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/remember_check_box"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="0.25"/>


</android.support.constraint.ConstraintLayout>